  ircd_SSL_read must emulate the same. codemastr: could you check what the
  win32 equiviant of EIO is? I don't think my WSAEIO or whatever I called it
  in sys.h is correct.
- Seemingily we can't do SSLv3 only for ctx_server?
- Fixed some SJ3 bugs that could cause desync in rare cases
- Added some technical documentation in doc/technical. Docs include: 005.txt, base64.txt,
  token.txt, protoctl.txt, and vl.txt
- Send +f and +L in correct part of 005.
- Fixed SSL linking, again..
- SSL compile error fix in s_bsd.c
- Added some OpenSSL version showing
- Win32 SSL compile fixes
- Made /trace show correct for SSL handshake(s)
- RELEASENOTES stuff
- Win32 installer fixes (changed version to beta11)
- Changed version to beta11
- updated .RELEASE.NOTES to explain operinvite
- Fixed SSL compile error wrt to /trace
- Removed doc/features.txt, doc/unrealircd.conf.txt, include/relinfo.h,
  include/stamp.h, src/buildm4, src/chkconf.c, src/conftool.c
- Removed doc/Etiquette
- Compile error fix regarding version.h
- Made +x send out a SETHOST to VHP servers, requested by PreZ@DarkerNet
- Removed support for SSLv2 (SSLv2 is obsolete and insecure)
- .RELEASE.NOTES change
- Cleaned out Credits (i'll fix the web part of it later), made doug lea malloc default
  on Linux FSU Pthread installs. (When we got a better way, we will have full doug lea malloc..)
- Made OPEROVERRIDE_VERIFY default undeffed
- SSL fixes to deal with not allowing SSLv2
*** beta11 released ***
- Removed src/s_unreal.c contained 2 functions, 1 never used, 1 used once
- Removed /hash (did nothing), removed /post (replaced by scan_http)
- Modulized /vhost, /cycle, /svsjoin, /svspart
- Fixed a autoconf problem where FD_SETSIZE was NOT replaced when it wasn't big enough
  (abort() problem on some installs.)
- Readded find_match_server which got removed, m_rping uses it. Now in hash.c
- Added note about Linux and FD_SETSIZE > 1024 in release notes
- Made IRCd bitch properly when MAXCONNECTIONS>FD_SETSIZE